; ModuleID = '/home/carl/AnghaBench/h2o/deps/quicly/lib/extr_quicly.c_get_epoch.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/quicly/lib/extr_quicly.c_get_epoch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@QUICLY_EPOCH_1RTT = common dso_local global i32 0, align 4
@QUICLY_PACKET_TYPE_BITMASK = common dso_local global i32 0, align 4
@QUICLY_EPOCH_INITIAL = common dso_local global i32 0, align 4
@QUICLY_EPOCH_HANDSHAKE = common dso_local global i32 0, align 4
@QUICLY_EPOCH_0RTT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [6 x i8] c"FIXME\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @get_epoch to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_epoch(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = call i32 @QUICLY_PACKET_IS_LONG_HEADER(i32 %4)
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %9, label %7

7:                                                ; preds = %1
  %8 = load i32, i32* @QUICLY_EPOCH_1RTT, align 4
  store i32 %8, i32* %2, align 4
  br label %21

9:                                                ; preds = %1
  %10 = load i32, i32* %3, align 4
  %11 = load i32, i32* @QUICLY_PACKET_TYPE_BITMASK, align 4
  %12 = and i32 %10, %11
  switch i32 %12, label %19 [
    i32 128, label %13
    i32 129, label %15
    i32 130, label %17
  ]

13:                                               ; preds = %9
  %14 = load i32, i32* @QUICLY_EPOCH_INITIAL, align 4
  store i32 %14, i32* %2, align 4
  br label %21

15:                                               ; preds = %9
  %16 = load i32, i32* @QUICLY_EPOCH_HANDSHAKE, align 4
  store i32 %16, i32* %2, align 4
  br label %21

17:                                               ; preds = %9
  %18 = load i32, i32* @QUICLY_EPOCH_0RTT, align 4
  store i32 %18, i32* %2, align 4
  br label %21

19:                                               ; preds = %9
  %20 = call i32 @assert(i32 0)
  br label %21

21:                                               ; preds = %7, %13, %15, %17, %19
  %22 = load i32, i32* %2, align 4
  ret i32 %22
}

declare dso_local i32 @QUICLY_PACKET_IS_LONG_HEADER(i32) #1

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
